# flake8-nested-fstrings

./: .pre-commit-config.yaml  README.md  flake8_nested_fstrings.py  pyproject.toml  requirements.txt
.github/workflows/: main.yml  release.yml
tests/: test_flake8_nested_fstrings.py
