[project]
name = "flake8-nested-fstrings"
version = "1.2.0"
description = "flake8 plugin which forbids nesting f-strings inside other f-strings."
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [
    {name = "Ferran Jovell", email = "ferran.jovell+gh@gmail.com"}
]
keywords = ["flake8"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: CPython"
]
 dependencies = [
    "flake8",
 ]

[project.optional-dependencies]
test = [
    "pytest",
    "mypy",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project.entry-points]
'flake8.extension' = { NFS = 'flake8_nested_fstrings:Plugin' }
